--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A Sombra Sã</title>
+</head>
+<body>
+    <div>
+        <h1>A Sombra Sã</h1>
+    </div>
+</body>
+</html>
