--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Sombra Sã</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .cabeçalho{
+            width:100%
+            bgcolor:rpg(201, 171, 87)
+        }
+    </style>
 </head>
 <body>
     <div>
