--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>A Sombra Sã</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        .cabeçalho{
+        #cabeçalho{
             width:100%
+            height:600px
             bgcolor:rpg(201, 171, 87)
         }
     </style>
 </head>
 <body>
-    <div>
+    <div id="cabeçalho">
         <h1>A Sombra Sã</h1>
         <p>ooomaga</p>
     </div>
