--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>A Sombra Sã</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        #cabeçalho{
+        #cabecalho{
             width:100%
             height:600px
             bgcolor:rpg(201, 171, 87)
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <div id="cabeçalho">
+    <div id="cabecalho">
         <h1>A Sombra Sã</h1>
         <p>ooomaga</p>
     </div>
