--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         #cabecalho{
             width:100%
             height:600px
-            bgcolor:rgb(201, 171, 87)
+            color:rgb(201, 171, 87)
         }
     </style>
 </head>
