--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         #cabecalho{
-            width:100%
-            height:600px
-            color:rgb(201, 171, 87)
+            background-color:rgb(201, 171, 87)
         }
     </style>
 </head>
