--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Sombra Sã</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        #cabecalho{
+            background-color:rgb(224, 194, 110)
+            width: 100%
+            heigth: 600px
+        }
+    </style>
 </head>
 <body>
     <div id="cabecalho">
