Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         #cabecalho{
             background-color:rgb(224, 194, 110)
+            width: 50px;
         }
     </style>
 </head>
