Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="cabecalho">
+    <footer>
         <h1>A Sombra Sã</h1>
         <p>ooomaga</p>
-    </div>
+    </footer>
 </body>
 </html>
