Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <footer>
+    <div class="container">
+      <footer>
         <h1>A Sombra Sã</h1>
         <p>ooomaga</p>
-    </footer>
+      </footer>
+    </div>
 </body>
 </html>
