Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-      <footer>
+    <footer>
+      <div id="logo_nome">
+        <img src="logo.png">
         <h1>A Sombra Sã</h1>
-        <p>ooomaga</p>
-      </footer>
-    </div>
+      </div>
+      <p>ooomaga</p>
+    </footer>
 </body>
 </html>
