--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <footer>
       <div id="logo_nome">
-        <img src="logo.png">
+        <h1>HEHE</h1>
         <h1>A Sombra Sã</h1>
       </div>
       <p>ooomaga</p>
