Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <footer>
       <div id="logo_nome">
-        <h1>HEHE</h1>
+        <h1>(aq vai fica a logo)</h1>
         <h1>A Sombra Sã</h1>
       </div>
-      <p>ooomaga</p>
+      <p>blablabla nav</p>
     </footer>
 </body>
 </html>
