Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <footer>
+    <header>
       <div id="logo_nome">
         <h1>(aq vai fica a logo)</h1>
         <h1>A Sombra Sã</h1>
       </div>
-      <p>blablabla nav</p>
-    </footer>
+      <nav>
+        <p>blablabla nav</p>
+      </nav>
+    </header>
 </body>
 </html>
