Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <header>
       <div id="logo_nome">
-        <h1>(aq vai fica a logo)</h1>
-        <h1>A Sombra Sã</h1>
+        <img src="logo.png">
       </div>
       <nav>
         <p>blablabla nav</p>
