Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
       <div id="logo_nome">
-        <img src="logo.png">
+        <img src="logo.png" height: 80%>
       </div>
       <nav>
         <p>blablabla nav</p>
