Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-      <div id="logo_nome">
-        <img src="logo.png" height: 80%>
+      <div id="logo_nome>
+        <img src="logo.png" height: 80%;>
       </div>
       <nav>
         <p>blablabla nav</p>
