--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
       <div id="logo_nome>
-        <img src="logo.png" height: 80%;>
+        <img src="logo.png" id="logo">
       </div>
       <nav>
         <p>blablabla nav</p>
