--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-      <div id="logo_nome>
+      <div id="logo_div>
         <img src="logo.png" id="logo">
       </div>
       <nav>
