--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <div id="logo_div">
         <img src="logo.png" id="logo">
+        <img src="a_sombra_sa.png" id="ass">
       </div>
       <nav>
         <p>blablabla nav</p>
