Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>A Sombra Sã</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+
 <body>
     <header>
       <div id="logo_div">
         <img src="logo.png" id="logo">
-        <img src="a_sombra_sa.png" id="ass">
+        <img src="a_sombra_sa.png" id="logo_text">
       </div>
       <nav>
         <p>blablabla nav</p>
