Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div id="logo_div">
         <img src="logo.png" id="logo">
-        <img src="a_sombra_sa.png" id="logo_text">
+        <img src="a_sombra_sa.png" id="text_logo">
       </div>
       <nav>
         <p>blablabla nav</p>
