--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
       <div id="logo_div">
-        <img src="logo.png" id="logo">
-        <img src="a_sombra_sa.png" id="text_logo">
+        <img src="logo.png" class="logo">
+        <img src="a_sombra_sa.png" class="logo" id="text_logo">
       </div>
       <nav>
         <p>blablabla nav</p>
