Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <nav>
         <p>blablabla nav</p>
-        <button id="menubttn" display:none><button>
+        <button id="menubttn" display:none></button>
       </nav>
     </header>
 </body>
