--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <nav>
         <p>blablabla nav</p>
-        <button id="menubttn" display:none></button>
+        <button id="navbttn" display:none><img src="navb.png" id="img_navbttn"></button>
       </nav>
     </header>
 </body>
