Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <header>
       <div id="logo_div">
-        <img src="logo.png" class="logo">
+        <a href="index.html">
+          <button class="logo">
+            <img src="logo.png" class="logo">
+          </button>
+        </a>
         <img src="a_sombra_sa.png" class="logo" id="text_logo">
       </div>
       <nav>
