Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
 
 <body>
     <header>
-      <div id="logo_div">
-        <a href="index.html">
-          <button class="logo">
-            <img src="logo.png" class="logo">
-          </button>
-        </a>
+      <button id="logo_div">
+        <img src="logo.png" class="logo">
         <img src="a_sombra_sa.png" class="logo" id="text_logo">
-      </div>
+      </button>
       <nav>
         <p>blablabla nav</p>
         <button id="navbttn" display:none><img src="navb.png" id="img_navbttn"></button>
