--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 <body>
     <header>
-      <button id="logo_div">
-        <img src="logo.png" class="logo">
-        <img src="a_sombra_sa.png" class="logo" id="text_logo">
-      </button>
+      <a href="index.html">
+        <button id="logo_div">
+          <img src="logo.png" class="logo">
+          <img src="a_sombra_sa.png" class="logo" id="text_logo">
+        </button>
+      </a>
       <nav>
         <p>blablabla nav</p>
         <button id="navbttn" display:none><img src="navb.png" id="img_navbttn"></button>
