Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
 <body>
     <header>
-      <a href="index.html">
-        <button id="logo_div">
-          <img src="logo.png" class="logo">
-          <img src="a_sombra_sa.png" class="logo" id="text_logo">
-        </button>
-      </a>
+      <div id="logo_div">
+        <img src="logo.png" class="logo">
+        <img src="a_sombra_sa.png" class="logo" id="text_logo">
+        <a href="index.html">
+          <button id="bttn_logo"></button>
+        </a>
+      </div>
       <nav>
         <p>blablabla nav</p>
         <button id="navbttn" display:none><img src="navb.png" id="img_navbttn"></button>
