Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <nav>
         <p>blablabla nav</p>
-        <button id="navbttn" display:none><img src="navb.png" id="img_navbttn"></button>
+        <button id="navbttn" style="display: none;"><img src="navb.png" id="img_navbttn"></button>
       </nav>
     </header>
 </body>
