Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
         <button id="navbttn" style="display: none;"><img src="navb.png" id="img_navbttn"></button>
       </nav>
     </header>
+
+    <main>
+      <h1>O QUE É A SOMBRA SÃ</h1>
+      <p>O mundo é saturado de mitos e contos dos mais diversos tipos, cada cultura com suas próprias histórias que são contadas de gerações em gerações, de pai para filho.
+
+Não se sabe ao certo onde esses contos começaram, ou quem os criou, e isso levanta dúvidas se eles são reais, ou apenas histórias pra crianças dormirem.</p>
+      <p></p>
+    </main>
 </body>
 </html>
