Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>A Sombra Sã</title>
     <link rel="icon" href="logo.png"/>
     <link rel="stylesheet" href="style.css">
+    <linl rel="stylesheet" href="responsive_mobile.css">
 </head>
 
 
