--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
 <body>
     <header>
+      <!-- LOGO -->
+      <a href="index.html">
       <div id="logo_div">
         <img src="logo.png" class="logo">
         <img src="a_sombra_sa.png" class="logo" id="text_logo">
-        <a href="index.html">
-          <button id="bttn_logo"></button>
-        </a>
       </div>
+      </a>
+      <!-- NAVIGATION -->
       <nav>
         <p>blablabla nav</p>
         <button id="navbttn" style="display: none;"><img src="navb.png" id="img_navbttn"></button>
@@ -26,11 +27,12 @@
     </header>
 
     <main>
-      <h1>O QUE É A SOMBRA SÃ</h1>
-      <p>O mundo é saturado de mitos e contos dos mais diversos tipos, cada cultura com suas próprias histórias que são contadas de gerações em gerações, de pai para filho.
+      <section id="oque_e">
+        <h1>O QUE É A SOMBRA SÃ</h1>
+        <p>O mundo é saturado de mitos e contos dos mais diversos tipos, cada cultura com suas próprias histórias que são contadas de gerações em gerações, de pai para filho.
 
 Não se sabe ao certo onde esses contos começaram, ou quem os criou, e isso levanta dúvidas se eles são reais, ou apenas histórias pra crianças dormirem.</p>
-      <p></p>
+      </section>
     </main>
 </body>
 </html>
