Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <!-- LOGO -->
       <a href="index.html">
       <div id="logo_div">
-        <img src="logo.png" class="logo">
-        <img src="a_sombra_sa.png" class="logo" id="text_logo">
+        <img src="img/logo/logo.png" class="logo">
+        <img src="img/logo/a_sombra_sa.png" class="logo" id="text_logo">
       </div>
       </a>
       <!-- NAVIGATION -->
