--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 Não se sabe ao certo onde esses contos começaram, ou quem os criou, e isso levanta dúvidas se eles são reais, ou apenas histórias pra crianças dormirem.</p>
             <p>Em meio a população existem conspiracionistas ou lunáticos que acreditam nesses mitos e tentam de alguma forma provar que são reais. E dentre essa comunidade, há um pequeno grupo de malucos que caça espíritos com equipamentos exóticos que nem eles sabem ao certo pra que servem, além de objetos comuns que de alguma forma possa servir pra eles.</p>
+            <img src="img/main/cruz_cor2" id="img1">
         </section>
     </main>
 </body>
