--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Sombra Sã</title>
-    <link rel="icon" href="img/logo/logo.png"/>
+    <link rel="icon" href="img/logo/logo_amarela.png"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive_mobile.css">
 </head>
