--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="img/logo/yellow_logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive_mobile.css">
+    <link rel="stylesheet" href="base.css">
 </head>
 
 
