--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@ Não se sabe ao certo onde esses contos começaram, ou quem os criou, e isso lev
             <img src="img/main/cruz_cor2.png" id="img1">
         </section>
     </main>
+    <aside></aside>
 </body>
 </html>
