--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <h1>OQUE É A SOMBRA SÃ</h1>
             <p id="p1">O mundo é saturado de mitos e contos dos mais diversos tipos, cada cultura com suas próprias histórias que são contadas de gerações em gerações, de pai para filho.
 
-Não se sabe ao certo onde esses contos começaram, ou quem os criou, e isso levanta dúvidas se eles são reais, ou apenas histórias pra crianças dormirem.</p>
+Não se sabe ao certo onde esses contos começaram, ou <strong>quem os criou</strong>, e isso levanta dúvidas se eles são <strong>reais</strong>, ou apenas histórias pra crianças dormirem.</p>
             <p id="p2">Em meio a população existem conspiracionistas ou lunáticos que acreditam nesses mitos e tentam de alguma forma provar que são reais. E dentre essa comunidade, há um pequeno grupo de malucos que caça espíritos com equipamentos exóticos que nem eles sabem ao certo pra que servem, além de objetos comuns que de alguma forma possa servir pra eles.</p>
             <img src="img/main/cruz_cor2.png" id="img1">
         </section>
     </main>
-    <aside>blablabla test</aside>
+    <aside></aside>
 </body>
 </html>
