--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@ Não se sabe ao certo onde esses contos começaram, ou <strong>quem os criou</st
             <img src="img/main/cruz_cor2.png" id="img1">
         </section>
     </main>
-    <aside></aside>
+    <aside>lorem ipsum blablabla</aside>
 </body>
 </html>
