--- a/index.html
+++ b/index.html
@@ -28,19 +28,26 @@
     </header>
 
     <main>
-        <section id="oque_e">
-            <h1>OQUE É A SOMBRA SÃ</h1>
-            <p id="p1">O mundo é saturado de mitos e contos dos mais diversos tipos, cada cultura com suas próprias histórias que são contadas de gerações em gerações, de pai para filho.
+        <div id="conteudo">
+            <section id="oque_e">
+                <h1>OQUE É A SOMBRA SÃ</h1>
+                <p id="p1">
+                    O mundo é saturado de mitos e contos dos mais diversos tipos, cada cultura com suas próprias histórias que são contadas de gerações em gerações, de pai para filho.
 
-Não se sabe ao certo onde esses contos começaram, ou <strong>quem os criou</strong>, e isso levanta dúvidas se eles são <strong>reais</strong>, ou apenas histórias pra crianças dormirem.</p>
-            <p id="p2">Em meio a população existem <strong>conspiracionistas</strong> ou <strong>lunáticos</strong> que acreditam nesses mitos e tentam de alguma forma provar que são reais. E dentre essa comunidade, há um pequeno grupo de malucos que <strong>caça espíritos</strong> com equipamentos exóticos que nem eles sabem ao certo pra que servem, além de objetos comuns que de alguma forma possa servir pra eles.</p>
-            <p id="p3">Esse grupo pode ser uns adolescentes irresponsáveis, ou então adultos formados que cansaram de ser normais e começaram a querer espalhar <strong>"a verdade"</strong>.
+Não se sabe ao certo onde esses contos começaram, ou <strong>quem os criou</strong>, e isso levanta dúvidas se eles são <strong>reais</strong>, ou apenas histórias pra crianças dormirem.
+                </p>
+                <p id="p2">
+                    Em meio a população existem <strong>conspiracionistas</strong> ou <strong>lunáticos</strong> que acreditam nesses mitos e tentam de alguma forma provar que são reais. E dentre essa comunidade, há um pequeno grupo de malucos que <strong>caça espíritos</strong> com equipamentos exóticos que nem eles sabem ao certo pra que servem, além de objetos comuns que de alguma forma possa servir pra eles.
+                </p>
+                <p id="p3">
+                    Esse grupo pode ser uns adolescentes irresponsáveis, ou então adultos formados que cansaram de ser normais e começaram a querer espalhar <strong>"a verdade"</strong>.
 
 Esse grupo, pode ser qualquer um, desde um riquinho, até um mendigo, desde um louco, até um gênio, não importa, crer em fantasmas é algo até que comum, e <strong>qualquer um pode</strong> ser idiota o suficiente de querer <strong>caça-los</strong>.
 
-Seu papel nessa história é definida por você e o mestre, mas algo é fato... <strong>Você vai ver coisas sobrenaturais</strong>.</p>
-            <img src="img/main/cruz_cor2.png" id="img1">
-        </section>
+Seu papel nessa história é definida por você e o mestre, mas algo é fato... <strong>Você vai ver coisas sobrenaturais</strong>.
+                </p>
+            </section>
+        </div>
     </main>
     <aside>lorem ipsum blablabla</aside>
 </body>
