Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 Não se sabe ao certo onde esses contos começaram, ou <strong>quem os criou</strong>, e isso levanta dúvidas se eles são <strong>reais</strong>, ou apenas histórias pra crianças dormirem.
                 </p>
+                <img src="img/main/cruz_cor2.png" id="img1">
                 <p id="p2">
                     Em meio a população existem <strong>conspiracionistas</strong> ou <strong>lunáticos</strong> que acreditam nesses mitos e tentam de alguma forma provar que são reais. E dentre essa comunidade, há um pequeno grupo de malucos que <strong>caça espíritos</strong> com equipamentos exóticos que nem eles sabem ao certo pra que servem, além de objetos comuns que de alguma forma possa servir pra eles.
                 </p>
