Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Seu papel nessa história é definida por você e o mestre, mas algo é fato... 
                 </p>
             </section>
         </div>
-    <aside>lorem ipsum blablabla</aside>
+    <aside></aside>
     </main>
 </body>
 </html>
