--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@ Esse grupo, pode ser qualquer um, desde um riquinho, até um mendigo, desde um l
 Seu papel nessa história é definida por você e o mestre, mas algo é fato... <strong>Você vai ver coisas sobrenaturais</strong>.
                 </p>
             </section>
+            <section>
+                jajdhfuejsjsjsiisjajwjsjsjjdjejejdjhd
+            </section>
         </div>
     <aside></aside>
     </main>
