Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@ Esse grupo, pode ser qualquer um, desde um riquinho, até um mendigo, desde um l
 Seu papel nessa história é definida por você e o mestre, mas algo é fato... <strong>Você vai ver coisas sobrenaturais</strong>.
                 </p>
             </section>
-            <section>
-                jajdhfuejsjsjsiisjajwjsjsjjdjejejdjhd
+            <section id="como_jogar">
+                <h3>COMO JOGAR</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas efficitur, erat dapibus dignissim iaculis, sapien tortor hendrerit orci, at ultrices quam elit quis dolor. Cras fringilla magna ac ipsum commodo hendrerit. Ut aliquet nisi arcu, nec dapibus velit dignissim a. Curabitur euismod faucibus tellus eget consequat. Fusce consequat, purus nec aliquam tempor, ex tortor sodales ipsum, in pulvinar nunc libero quis metus. Vivamus semper felis non nibh pharetra, nec vehicula nulla maximus. Morbi sit amet odio eu nisl ultrices faucibus. Sed consequat nunc eu tortor elementum, ut convallis arcu pretium. Vestibulum tincidunt erat vitae consequat elementum. Sed eleifend, ligula ut egestas euismod, tortor arcu interdum tellus, id molestie justo nibh laoreet justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </section>
         </div>
     <aside></aside>
