Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
         </a>
         <!-- NAVIGATION -->
         <nav>
-            <p>blablabla nav</p>
-            <button id="navbttn" style="display: none;"><img src="navb.png" id="img_navbttn"></button>
+            <a href="oque_e">
+                blablabla nav
+            </a>
+            <button id="navbttn">
+                <img src="navb.png" id="img_navbttn">
+            </button>
         </nav>
     </header>
 
