Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
         <!-- NAVIGATION -->
         <nav>
-            <a href="oque_e">
+            <a href="#oque_e">
                 blablabla nav
             </a>
             <button id="navbttn">
