Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <!-- NAVIGATION -->
         <nav>
             <a href="#oque_e">
-                blablabla nav
+                <p>Oque é</p>
+            </a>
+            <a href="#como_jogar">
+                <p>Como Jogar</p>
             </a>
             <button id="navbttn">
                 <img src="navb.png" id="img_navbttn">
