Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- LOGO -->
         <a href="index.html">
             <div id="logo_div">
-                <img src="img/logo/logo.png" class="logo">
+                <img src="https://cdn.discordapp.com/avatars/590664494686928897/a5ef682c66d08c3c8dccf31e48914a99.webp?size=2048" class="logo">
                 <img src="img/logo/a_sombra_sa.png" class="logo" id="text_logo">
             </div>
         </a>
