--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
             <a href="#como_jogar">
                 <p>Como Jogar</p>
             </a>
-            <button id="navbttn">
-                <img src="navb.png" id="img_navbttn">
-            </button>
+            <button id="navbttn"></button>
         </nav>
     </header>
 
