--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#como_jogar">
                 <p>Como Jogar</p>
             </a>
-            <button id="navbttn" style="display:none;"></button>
+            <button id="navbttn" class="only_mobile"></button>
         </nav>
     </header>
 
