--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="index.html">
             <div id="logo_div">
                 <img src="img/logo/logo.png" class="logo">
-                <img src="img/logo/a_sombra_sa.png" class="logo only_pc" id="text_logo">
+                <img src="img/logo/a_sombra_sa.png" class="logo pc_only" id="text_logo">
             </div>
         </a>
         <!-- NAVIGATION -->
@@ -28,7 +28,7 @@
                 <p>Como Jogar</p>
             </a>
         </nav>
-        <button id="navbttn" class="only_mobile"></button>
+        <button id="navbttn" class="mobile_only"></button>
     </header>
 
     <main>
@@ -57,7 +57,7 @@ Seu papel nessa história é definida por você e o mestre, mas algo é fato... 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas efficitur, erat dapibus dignissim iaculis, sapien tortor hendrerit orci, at ultrices quam elit quis dolor. Cras fringilla magna ac ipsum commodo hendrerit. Ut aliquet nisi arcu, nec dapibus velit dignissim a. Curabitur euismod faucibus tellus eget consequat. Fusce consequat, purus nec aliquam tempor, ex tortor sodales ipsum, in pulvinar nunc libero quis metus. Vivamus semper felis non nibh pharetra, nec vehicula nulla maximus. Morbi sit amet odio eu nisl ultrices faucibus. Sed consequat nunc eu tortor elementum, ut convallis arcu pretium. Vestibulum tincidunt erat vitae consequat elementum. Sed eleifend, ligula ut egestas euismod, tortor arcu interdum tellus, id molestie justo nibh laoreet justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </section>
         </div>
-    <aside class="only_pc"></aside>
+    <aside class="pc_only"></aside>
     </main>
 </body>
 </html>
