Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </a>
         <!-- NAVIGATION -->
-        <nav>
+        <nav class="pc_only">
             <a href="#oque_e">
                 <p>Oque é</p>
             </a>
