Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!-- LOGO -->
         <a href="index.html">
             <div id="logo_div">
-                <img src="img/logo/logo.png" class="logo">
-                <img src="img/logo/a_sombra_sa.png" class="logo pc_only" id="text_logo">
+                <img src="img/logo/logo.png">
+                <img src="img/logo/a_sombra_sa.png" class="pc_only" id="text_logo">
             </div>
         </a>
         <!-- NAVIGATION -->
@@ -28,7 +28,7 @@
                 <p>Como Jogar</p>
             </a>
         </nav>
-        <button id="navbttn" class="mobile_only"></button>
+        <button class="mobile_only"></button>
     </header>
 
     <main>
