Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Como Jogar</p>
             </a>
         </nav>
-        <button class="mobile_only"></button>
+        <button class="mobile_only" onclick="menuToggle()"></button>
     </header>
 
     <main>
