Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 <p>Como Jogar</p>
             </a>
         </nav>
-        <button class="mobile_only" onclick="menuToggle()"></button>
+        <button class="mobile_only" onclick="menuToggle()">
+            <img src="img/main/menubutton.png" id="menubutton"></img>
+        </button>
     </header>
 
     <main>
