--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Como Jogar</p>
             </a>
         </nav>
-        <button class="mobile_only" onclick="menuToggle()">
+        <button class="mobile_only" onclick="menuToggle(0)">
         </button>
     </header>
 
@@ -60,7 +60,7 @@ Seu papel nessa história é definida por você e o mestre, mas algo é fato... 
             </section>
         </div>
     <aside id="menu">
-        <button onclick="menuToggle()"></button>
+        <button onclick="menuToggle(-100vw)"></button>
     </aside>
     </main>
 </body>
