Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </a>
         </nav>
         <button class="mobile_only" onclick="menuToggle(0)">
+            <img src="img/main/menubutton.png"></img>
         </button>
     </header>
 
