--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Seu papel nessa história é definida por você e o mestre, mas algo é fato... 
             </section>
         </div>
     <aside id="menu">
-        <button onclick="menuToggle('-100vw')"></button>
+        <button id="exit" onclick="menuToggle('-100vw')"></button>
     </aside>
     </main>
 </body>
