--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Como Jogar</p>
             </a>
         </nav>
-        <button class="mobile_only" onclick="menuToggle(0)">
+        <button id="menubutton" class="mobile_only" onclick="menuToggle(0)">
             <img src="img/main/menubutton.png"></img>
         </button>
     </header>
