--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Seu papel nessa história é definida por você e o mestre, mas algo é fato... 
             </section>
         </div>
     <aside id="menu">
-        <button id="menubutton" class="mobile_only" onclick="menuToggle(open)">
+        <button id="menubutton" class="mobile_only" onclick="menuToggle('open')">
             <img src="img/main/menubutton.png"></img>
         </button>
     </aside>
