--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ Seu papel nessa história é definida por você e o mestre, mas algo é fato... 
     <aside id="menu">
         <button id="menubutton" class="mobile_only" onclick="menuToggle()">
             <img src="img/main/menubutton.png"></img>
+            <img src="img/main/exitmenubutton.png"></img>
         </button>
     </aside>
     </main>
