--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ Seu papel nessa história é definida por você e o mestre, mas algo é fato... 
         </div>
     <aside id="menu">
         <button id="menubutton" class="mobile_only" onclick="menuToggle()">
-            <img src="img/main/menubutton.png"></img>
-            <img src="img/main/exitmenubutton.png" id="exitbutton"></img>
+            <img src="img/main/menubutton.png" id="menubutton_img"></img>
+            <img src="img/main/exitmenubutton.png" id="exitbutton_img"></img>
         </button>
     </aside>
     </main>
